Android testing 1st Draft

--- a/references.bib
+++ b/references.bib
@@ -89,6 +89,18 @@
   Timestamp                = {2015.10.11}
 }
 
+@Electronic{androidTesting,
+  Title                    = {Testing Fundamentals},
+  Author                   = {Android},
+  HowPublished             = {http://developer.android.com/tools/testing/testingandroid.html},
+  Language                 = {English},
+  Organization             = {Google},
+  Url                      = {http://developer.android.com/tools/testing/testing_android.html},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.16}
+}
+
 @Electronic{broadcastReceiver,
   Title                    = {Android Broadcast Receiver},
   Author                   = {Android},
@@ -219,6 +231,16 @@
   Publisher                = {Massachusetts Medical Society},
   Timestamp                = {2015.10.12},
   Url                      = {http://dx.doi.org/10.1056/NEJMp0901592}
+}
+
+@Book{androidTestingBook,
+  Title                    = {Learning Android Application Testing},
+  Author                   = {Paul Blundell},
+  Publisher                = {Packt Publishing},
+  Year                     = {2015},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.16}
 }
 
 @Article{Bolton-Maggs2013,
@@ -662,6 +684,18 @@
   Bdsk-url-1               = {http://www.epsos.eu/epsos-services.html},
   Owner                    = {ilias},
   Timestamp                = {2015.09.29}
+}
+
+@Electronic{facebookApiCapabilities,
+  Title                    = {Getting Started Android SDK},
+  Author                   = {Facebook},
+  HowPublished             = {https://developers.facebook.com/docs/android/getting-started},
+  Organization             = {Facebook},
+  Url                      = {https://developers.facebook.com/docs/android/getting-started},
+  Year                     = {2015},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.15}
 }
 
 @Article{1973,
