--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -688,6 +688,20 @@
 		\subsubsection{Broadcast Receivers}
 		Οι δέκτες εκπεμπόμενων προθέσεων είναι υπεύθυνοι για την λήψη και διαχείριση γεγονότων πραγματοποιούνται στην συσκευή. Συγκεκριμένα ενημερώνονται από το λειτουργικό σύστημα όταν πραγματοποιείται κάποιο γεγονός και τότε ενεργοποιούνται. Χαρακτηριστικά παραδείγματα τέτοιων γεγονότων είναι ότι το κινητό μπήκε σε κατάσταση αναμονής, ότι η στάθμη της μπαταρίας είναι χαμηλή κτλπ. Οι δέκτες εκπεμπόμενων προθέσεων δεν παρέχουν κάποια διεπαφή προς τον χρήστη όπως και οι υπηρεσίες και μπορούν να επικοινωνήσουν με τον χρήστη μέσω ειδοποιήσεων στο status bar.\cite{broadcastReceiver}
 
-		\textbf{Material design ? Αν δεν είναι API Level 21?}
-	\subsection{Mockups}
-	\subsection{Διασύνδεση με Social Networks}
+%		\textbf{Material design ? Αν δεν είναι API Level 21?}
+%	\subsection{Mockups}
+%	\subsection{Διασύνδεση με Social Networks}
+%	Όπως παρουσιάσαμε και στο την ενότητα  \ref{ssec:social_netowrks_system_analysis} η διασύνδεση με τα μέσα κοινωνικής δικτύωσης αποτελεί θέμα μείζονος σημασίας για την εφαρμογή έξυπνου κινητού του συστήματος μας, καθώς παίζει καθοριστικό ρόλο στην επίτευξη των στόχων που θέσαμε στην ενότητα \ref{sec:intro_goals}. Δηλαδή στην προσέλκυση νέων εθελοντών αιμοδοτών αλλά και στην διατήρηση (retention) των υπαρχόντων εθελοντών. Στο παρόν κεφάλαιο θα γίνει μια σύντομη αναφορά στον τρόπο διασύνδεσης μιας εφαρμογής android με το κοινωνικό δίκτυο facebook.
+%	
+%%		\subsubsection{Facebook Integration}
+%%		Το facebook παρέχει προς τους προγραμματιστές SDKs - Software Development Kits (Κιτ ανάπτυξης λογισμικού), μέσω του οποίου μπορούν να πραγματοποιήσουν εύκολη επικοινωνία μεταξύ της εφαρμογής που αναπτύσσουν και των υπηρεσιών που παρέχει το Facebook. Συγκεκριμένα μέσω του Android SDK που χρησιμοποιήθηκε στα πλαίσια της παρούσας διπλωματικής εργασίας, δίνεται η δυνατότητα να χρησιμοποιηθούν οι παρακάτω υπηρεσίες του facebook\cite{facebookApiCapabilities}:
+%%		\begin{itemize}
+%%			\item Facebook Login: Σύνδεση με χρήση του λογαριασμού που ο χρήστης διατηρεί στο facebook
+%%			\item Share and send dialogs: Διαμοιρασμός περιεχομένου της εφαρμογής στο facebook
+%%			\item App events: Καταγραφή της συμπεριφοράς του χρήστη
+%%			\item Graph API: Δυνατότητα γραφής και ανάγνωσης στο Graph API
+%%		\end{itemize}
+%%		
+%%	Το πρώτο βήμα για την διασύνδεση μεταξύ εφαρμογής έξυπνου κινητού και facebook είναι η δημιουργία μίας εφαρμογής στο Facebook. Κατά την δημιουργία της εφαρμογής θα πρέπει να εισαχθούν κάποια διαπιστευτήρια της εφαρμογής έξυπνου κινητού όπως το Google Play package name αλλά και το hask key της εφαρμογής.
+%%	
+%		Στη συνέχεια θα κάνουμε μια σύντομη ανάλυση για τις υπηρεσίες διαμοιρασμού περιεχομένου και επικοινωνίας με το Graph API, τις οποίες και χρησιμοποιήσαμε κατά την ανάπτυξη του συστήματος της παρούσας διπλωματικής.
