Interoperability - epSos - EMR only the beginning :(

--- a/references.bib
+++ b/references.bib
@@ -608,6 +608,52 @@
   Url                      = {http://dx.doi.org/10.1007/s00607-010-0106-z}
 }
 
+@Article{Dogac2012,
+  Title                    = {Interoperability in eHealth Systems},
+  Author                   = {Dogac, Asuman},
+  Journal                  = {Proc. VLDB Endow.},
+  Year                     = {2012},
+
+  Month                    = aug,
+  Number                   = {12},
+  Pages                    = {2026--2027},
+  Volume                   = {5},
+
+  __markedentry            = {[revekka:]},
+  Acmid                    = {2367568},
+  Doi                      = {10.14778/2367502.2367568},
+  ISSN                     = {2150-8097},
+  Issue_date               = {August 2012},
+  Numpages                 = {2},
+  Owner                    = {revekka},
+  Publisher                = {VLDB Endowment},
+  Timestamp                = {2015.10.16},
+  Url                      = {http://dx.doi.org/10.14778/2367502.2367568}
+}
+
+@Article{Dogac2012a,
+  Title                    = {Interoperability in eHealth Systems},
+  Author                   = {Dogac, Asuman},
+  Journal                  = {Proc. VLDB Endow.},
+  Year                     = {2012},
+
+  Month                    = aug,
+  Number                   = {12},
+  Pages                    = {2026--2027},
+  Volume                   = {5},
+
+  __markedentry            = {[revekka:6]},
+  Acmid                    = {2367568},
+  Doi                      = {10.14778/2367502.2367568},
+  ISSN                     = {2150-8097},
+  Issue_date               = {August 2012},
+  Numpages                 = {2},
+  Owner                    = {revekka},
+  Publisher                = {VLDB Endowment},
+  Timestamp                = {2015.10.16},
+  Url                      = {http://dx.doi.org/10.14778/2367502.2367568}
+}
+
 @Article{Dudley2010,
   Title                    = {Translational bioinformatics in the cloud: an affordable alternative},
   Author                   = {Dudley, Joel T and Pouliot, Yannick and Chen, Rong and Morgan, Alexander A and Butte, Atul J},
@@ -673,6 +719,15 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.13}
+}
+
+@Electronic{epSOS,
+  Title                    = {epSOS},
+  Author                   = {epSOS},
+  Url                      = {http://www.epsos.eu/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.16}
 }
 
 @Electronic{epsos,
@@ -863,8 +918,6 @@ Timothy Grance},
   Number                   = {3},
   Pages                    = {353--359},
   Volume                   = {19},
-
-  __markedentry            = {[revekka:6]},
   Abstract                 = {Objective A core feature of e-prescribing is the electronic exchange of prescription data between physician practices and pharmacies, which can potentially improve the efficiency of the prescribing process and reduce medication errors. Barriers to implementing this feature exist, but they are not well understood. This study{\textquoteright}s objectives were to explore recent physician practice and pharmacy experiences with electronic transmission of new prescriptions and renewals, and identify facilitators of and barriers to effective electronic transmission and pharmacy e-prescription processing.Design Qualitative analysis of 114 telephone interviews conducted with representatives from 97 organizations between February and September 2010, including 24 physician practices, 48 community pharmacies, and three mail-order pharmacies actively transmitting or receiving e-prescriptions via Surescripts.Results Practices and pharmacies generally were satisfied with electronic transmission of new prescriptions but reported that the electronic renewal process was used inconsistently, resulting in inefficient workarounds for both parties. Practice communications with mail-order pharmacies were less likely to be electronic than with community pharmacies because of underlying transmission network and computer system limitations. While e-prescribing reduced manual prescription entry, pharmacy staff frequently had to complete or edit certain fields, particularly drug name and patient instructions.Conclusions Electronic transmission of new prescriptions has matured. Changes in technical standards and system design and more targeted physician and pharmacy training may be needed to address barriers to e-renewals, mail-order pharmacy connectivity, and pharmacy processing of e-prescriptions.},
   Doi                      = {10.1136/amiajnl-2011-000515},
   ISSN                     = {1067-5027},
@@ -993,7 +1046,7 @@ Timothy Grance},
   Timestamp                = {2015.10.11}
 }
 
-@Electronic{idika,
+@Electronic{IDIKA,
   Title                    = {IDIKA S.A.},
   Author                   = {IDIKA},
   Url                      = {http://www.idika.gr},
@@ -1075,8 +1128,6 @@ Timothy Grance},
   Number                   = {2},
   Pages                    = {24-30},
   Volume                   = {10},
-
-  __markedentry            = {[revekka:]},
   Doi                      = {10.1109/MITP.2008.22},
   ISSN                     = {1520-9202},
   Keywords                 = {Web services;health care;patient monitoring;patient treatment;software architecture;telemedicine;SOA;Web services;distributed e-healthcare system;drug-delivery devices;electronic communication;medical monitoring devices;service-oriented architecture;Biomedical monitoring;Buildings;Medical services;Medical tests;Medical treatment;Patient monitoring;Performance evaluation;Semiconductor optical amplifiers;Service oriented architecture;System testing;Atom;RSS;SOA;Web services;e-healthcare;e-prescription;electronic health record;healthcare standards;interoperability;medical devices;service-oriented architecture;speech software},
