--- a/interoperability.tex
+++ b/interoperability.tex
@@ -3,6 +3,71 @@
 \section{Απαιτήσεις}
 
 \section{Πρωτόκολλα επικοινωνίας}
+
+Το HL7 αναφέρεται στο επίπεδο υγείας 7 (Health Level 7), μια πλήρως εθελοντική, μη κερδοσκοπική οργάνωση υγείας που ενεπλάκη στην ανάπτυξη διεθνών προτύπων υγειονομικής περίθαλψης. Ο όρος HL7 αναφέρεται επίσης σε μερικά από τα συγκεκριμένα πρότυπα που δημιουργούνται από τον οργανισμό, όπως για παράδειγμα: HL7 v2.x, v3.0 κ.α.
+Το HL7 και τα μέλη του αφιερώνονται στην παροχή ενός περιεκτικού πλαισίου (και των σχετικών προτύπων) για την ανταλλαγή, την ολοκλήρωση, τη διανομή και την ανάκτηση των ηλεκτρονικών πληροφοριών υγείας. Τα πρότυπα, που υποστηρίζουν την κλινική πρακτική και τη διαχείριση, παράδοση και αξιολόγηση των υγειονομικών υπηρεσιών, είναι τα περισσότερο χρησιμοποιούμενα παγκοσμίως.
+Ηλεκτρονικός φάκελος ασθενών με χρήση XML Services και BPEL 69 Web
+￼￼￼￼￼￼￼￼￼
+￼Τμήμα Ψηφιακών Συστημάτων - Πανεπιστήμιο Πειραιώς
+￼￼￼￼￼￼￼￼￼Τα νοσοκομεία συνήθως χρησιμοποιούν πολλά διαφορετικά ηλεκτρονικά υπολογιστικά συστήματα για όλες τις λειτουργίες τους, από την τιμολόγηση των αρχείων μέχρι την παρακολούθηση ασθενούς. Όλα αυτά τα συστήματα πρέπει να επικοινωνήσουν το ένα με το άλλο (διεπαφή) όταν λαμβάνουν τις νέες πληροφορίες. Το HL7 είναι μια γλώσσα με την οποία τα διάφορα συστήματα υγειονομικής περίθαλψης μπορούν να το κάνουν αυτό. Υπάρχει μια μεγάλη ποσότητα πληροφοριών που τα συστήματα υγειονομικής περίθαλψης πρέπει να μεταβιβάσουν. Η σύνδεση των διάφορων συστημάτων υγειονομικής περίθαλψης είναι δύσκολη χωρίς μια κοινή γλώσσα (όπως το HL7).
+Στόχος του HL7 είναι η κλινική διαλειτουργικότητα, δηλαδή «Να παρέχει πρότυπα στις ανταλλαγές, την διαχείριση και την ολοκλήρωση των δεδομένων που υποστηρίζουν την φροντίδα του ασθενούς, αλλά και την διαχείριση, διανομή και αποτίμηση σε ολόκληρο το περιβάλλον της φροντίδας υγείας». Η στρατηγική του HL7 είναι η συνεχής καινοτομία.
+Υπόβαθρο και οργανωτική δομή
+Ο οργανισμός HL7 έχει αυξηθεί από 14 μέλη το 1987 σε πάνω από 2200 μέλη παγκοσμίως σήμερα, συμπεριλαμβανομένων 500 εταιρικών μελών και διεθνείς θυγατρικές σε 33 χώρες. Αυτά τα μέλη μοιράζονται μια δέσμευση, για την ανάπτυξη και την πρόοδο των κλινικών και διοικητικών προτύπων στην υγειονομική περίθαλψη. Χρησιμοποιώντας ένα καθορισμένο με σαφήνεια σύνολο λειτουργικών διαδικασιών, τα μέλη του HL7 - συμπεριλαμβανομένων των προμηθευτών, των συμβούλων και των πληρωτών - έχουν πείρα τεχνολογίας πληροφοριών σε όλα τα τμήματα της βιομηχανίας υγειονομικής περίθαλψης. Συλλογικά, αναπτύσσουν τα πρότυπα με σκοπό να αυξήσουν την αποτελεσματικότητα, την αποδοτικότητα και την ποιότητα παράδοσης υγειονομικής περίθαλψης.
+Ο οργανισμός διευθύνεται από ένα διοικητικό συμβούλιο, το οποίο περιλαμβάνει οκτώ εκλεγμένες θέσεις και τρεις διορισμένες θέσεις. Τα μέλη του HL7 είναι συλλογικά γνωστά ως «ομάδα εργασίας». Η ομάδα εργασίας είναι αρμόδια για τον καθορισμό του HL7 τυποποιημένου πρωτοκόλλου και αποτελείται από τις μόνιμες διοικητικές επιτροπές, τις ομάδες ειδικού ενδιαφέροντος και τις τεχνικές επιτροπές. Οι μόνιμες διοικητικές επιτροπές εστιάζουν στις οργανωτικές ή προωθητικές δραστηριότητες, όπως η εκπαίδευση, η εφαρμογή, η διαφήμιση, η έκδοση και βελτίωση απόδοσης και η σχεδίαση. Οι ομάδες ειδικού ενδιαφέροντος χρησιμεύουν ως ένα πεδίο δοκιμής για να ερευνήσουν τις νέες περιοχές που μπορεί να χρειαστούν κάλυψη στα HL7 δημοσιοποιημένα πρότυπα. Οι Τεχνικές
+Ηλεκτρονικός φάκελος ασθενών με χρήση XML Services και BPEL 70 Web
+￼￼￼￼￼￼￼￼￼
+￼Τμήμα Ψηφιακών Συστημάτων - Πανεπιστήμιο Πειραιώς
+￼￼￼￼￼￼￼￼￼Επιτροπές είναι άμεσα αρμόδιες για το περιεχόμενο των προτύπων, πλαισιώνοντας την πραγματική γλώσσα των προδιαγραφών.
+Μια συχνή παρερμηνεία για το HL7 είναι ότι η ομάδα αναπτύσσει λογισμικό. Στην πραγματικότητα, η αρχική αποστολή του HL7 είναι να δημιουργηθούν ευέλικτα, χαμηλού κόστους πρότυπα, οδηγίες και μεθοδολογίες που θα επιτρέψουν την ανταλλαγή και τη διαλειτουργικότητα των ηλεκτρονικών χαρτών υγείας. Τέτοιες οδηγίες ή πρότυπα δεδομένων είναι ένα σύνολο κανόνων που επιτρέπουν στις πληροφορίες να μοιραστούν και να υποβληθούν σε επεξεργασία κατά τρόπο ομοιόμορφο και συνεπή. Χωρίς πρότυπα δεδομένων, οι οργανώσεις υγειονομικής περίθαλψης δεν θα μπορούσαν να μοιραστούν εύκολα κλινικές πληροφορίες. Θεωρητικά, αυτή η δυνατότητα να ανταλλαχθούν οι πληροφορίες πρέπει να βοηθήσει να ελαχιστοποιηθεί η τάση να είναι η ιατρική φροντίδα γεωγραφικά απομονωμένη και ιδιαίτερα μεταβλητή.
+Οι περισσότεροι οργανισμοί ανάπτυξης προτύπων (Standards Ανάπτυξη Οργανισμοί), συμπεριλαμβανομένου του HL7, αναπτύσσουν πρότυπα για μια ιδιαίτερη περιοχή υγειονομικής περίθαλψης όπως το φαρμακείο, οι ιατρικές συσκευές, οι συναλλαγές απεικόνισης ή ασφάλειας. Το φάσμα του HL7 είναι κλινικά δεδομένα και δεδομένα διαχείρισης. Τα πρότυπα ανταλλαγής μηνυμάτων είναι ιδιαίτερα σημαντικά επειδή καθορίζουν πως οι πληροφορίες συσκευάζονται και διαβιβάζονται από το ένα συμβαλλόμενο μέρος σε άλλο. Τέτοια πρότυπα θέτουν τη γλώσσα, τύπους δομών και δεδομένων που απαιτούνται για τη συνεχή ολοκλήρωση από ένα σύστημα σε άλλο. Αυτή την περίοδο, τα πρότυπα ανταλλαγής μηνυμάτων του HL7 υποστηρίζονται από κάθε σημαντικό προμηθευτή πληροφοριακών συστημάτων στις Ηνωμένες Πολιτείες.
+Τομείς ενδιαφέροντος
+Το 1994, το HL7 αναγνωρίστηκε από το ANSI (διεθνή οργανισμό προτύπων). Στα έτη από την ίδρυσή του, το HL7 έχει επεκτείνει την επιρροή του πέρα ​​από τα παραδοσιακά πρωτόκολλα ανταλλαγής μηνυμάτων. Σήμερα οι πρωτοβουλίες ανάπτυξης προτύπων HL7 περιλαμβάνουν τα εξής:
+- Τυποποίηση της απεικόνισης γνώσης
+- Προδιαγραφή των συστατικών για τη διαχείριση πλαισίου
+- Υποστήριξη για την ανταλλαγή στοιχείων υγειονομικής περίθαλψης χρησιμοποιώντας
+μεσίτες αιτήματος αντικειμένου (object αιτήματος μεσίτη)
+Ηλεκτρονικός φάκελος ασθενών με χρήση XML Services και BPEL 71 Web
+￼￼￼￼￼￼￼￼￼
+￼Τμήμα Ψηφιακών Συστημάτων - Πανεπιστήμιο Πειραιώς
+￼￼￼￼￼￼￼￼￼- Τυποποίηση των δομών εγγράφων XML
+- Λειτουργικές προδιαγραφές για ένα ηλεκτρονικό αρχείο υγείας
+- Δουλειά στον τομέα της ασφάλειας, της μυστικότητας, της εμπιστευτικότητας και της
+υπευθυνότητας
+Τέτοια καινοτομία έχει επιτρέψει τα πάντα, από τη διαθεσιμότητα ενός διαδικτυακού ιατρικού αρχείου ασθενούς στη συνταγή ενός φαρμακείου που ανταλλάσσεται με ένα έγγραφο XML HL7. Στην πραγματικότητα, η HL7 αρχιτεκτονική φακέλου ασθενούς στην έκδοση 3.0 επιτρέπει ένα κοινό σχήμα για την ανταλλαγή του ιατρικού αρχείου ενός ασθενή μεταξύ των διαφορετικών συστημάτων νοσοκομείων ή ακόμα και των διαφορετικών νοσοκομείων. Αυτό το HL7 πρότυπο χρησιμεύει ως θεμέλιο για το ηλεκτρονικό ιατρικό αρχείο.
+Ο σκοπός των δραστηριοτήτων του HL7 δεν περιορίζεται στο ηλεκτρονικό ιατρικό αρχείο, εντούτοις. Πράγματι, οι πρόσφατες δραστηριότητες και τα πρότυπα HL7 έχουν περιλάβει τη διαμόρφωση και τη μεθοδολογία, το λεξιλόγιο, την υποστήριξη κλινικής απόφασης, την οικονομική διαχείριση, τη διοίκηση, τη ρυθμισμένη κλινική έρευνα και τη διαχείριση πληροφοριών, το σχεδιασμό και τις διοικητικές μέριμνες, τις κλινικές οδηγίες, τα κυβερνητικά προγράμματα, το φάρμακο, την ασφάλεια και την υπευθυνότητα, τα πρότυπα XML, και την απάντηση δημόσιας υγείας και έκτακτης ανάγκης.
+Το HL7 έχει επιτρέψει τη διαλειτουργικότητα μεταξύ των συστημάτων ηλεκτρονικής διοίκησης ασθενών (Patient Συστημάτων Διαχείρισης), των συστημάτων ηλεκτρονικής πρακτικής διαχείρισης (Ηλεκτρονική Διαχείριση Πρακτικής), των συστημάτων εργαστηριακών πληροφοριών (Εργαστήριο Πληροφοριακών Συστημάτων). Το HL7 καλύπτει τον πλήρη κύκλο ζωής μιας προδιαγραφής προτύπων συμπεριλαμβανομένης της ανάπτυξης, της υιοθέτησης, της αναγνώρισης αγοράς και της χρησιμοποίησης.
+Συγκεκριμένοι στόχοι HL7
+Ο κύριος στόχος του HL7 είναι η ανάπτυξη ενός προτύπου το οποίο θα επιτρέπει τη μεταφορά και ανταλλαγή δεδομένων (ιατρικής πληροφορίας) μεταξύ εντελώς διαφορετικών οργανισμών και συστημάτων. Αναλυτικότερα:
+Ηλεκτρονικός φάκελος ασθενών με χρήση XML Services και BPEL 72 Web
+￼￼￼￼￼￼￼￼￼
+￼Τμήμα Ψηφιακών Συστημάτων - Πανεπιστήμιο Πειραιώς
+￼￼￼￼￼￼￼￼￼- Ανάπτυξη κατανοητών, με δυνατότητα επέκτασης προτύπων που επιτρέπουν δομημένη, κωδικοποιημένη πληροφορία υγειονομικής περίθαλψης, που ανταλλάσσεται μεταξύ πληροφοριακών εφαρμογών διατηρώντας τη σημασία.
+- Ανάπτυξη μιας επίσημης μεθοδολογίας για την υποστήριξη της δημιουργίας προτύπων HL7.
+- Εκπαίδευση της βιομηχανίας υγειονομικής περίθαλψης, τους φορείς χάραξης πολιτικής, και το ευρύ κοινό σχετικά με τα οφέλη της τυποποίησης πληροφοριών υγειονομικής
+περίθαλψης γενικά και για τα HL7 πρότυπα συγκεκριμένα.
+- Προώθηση της χρήσης του HL7 προτύπων παγκοσμίως μέσω της δημιουργίας διεθνών
+HL7 θυγατρικών οργανισμών, οι οποίοι συμμετέχουν στην ανάπτυξη των προτύπων HL7.
+- Συνεργασία με άλλες οργανώσεις ανάπτυξης προτύπων και εθνικούς και διεθνείς οργανισμούς (π.χ. ANSI και ISO), στις περιοχές υποδομής υγειονομικής περίθαλψης και
+πληροφοριών για προώθηση της χρήσης των υποστηρικτικών και συμβατών προτύπων.
+- Συνεργασία με τους χρήστες τεχνολογίας πληροφοριών υγειονομικής περίθαλψης για να εξασφαλιστεί πως τα HL7 πρότυπα καλύπτουν τις πραγματικές απαιτήσεις, και ότι οι προσπάθειες ανάπτυξης κατάλληλων προτύπων δημιουργούνται από τον οργανισμό HL7
+για να καλύψουν τις προκύπτουσες απαιτήσεις.
+Η RIM - ISO / HL7 21731
+Το μοντέλο αναφοράς πληροφορίας (RIM) είναι ο ακρογωνιαίος λίθος της ανάπτυξης της έκδοσης 3 του HL7 και ένα αναγκαίο μέρος της μεθοδολογίας ανάπτυξης του HL7. Το RIM εκφράζει τα δεδομένα που απαιτούνται σε μια συγκεκριμένη έκφανση της κλινικής λειτουργίας και παρέχει μια συγκεκριμένη αναπαράσταση των μεταπληροφοριών (σημασιολογία) και λεξικών συνδέσεων που υπάρχουν μεταξύ των μηνυμάτων που μεταφέρονται στο επίπεδο του HL7.
+Επίπεδο ανάπτυξης (πλαίσιο ανάπτυξης) HL7 - ISO / HL7 27931
+Το επίπεδο ανάπτυξης (HDF) του HL7 προτύπου 3 είναι μια διαδικασία συνεχούς εξέλιξης που αποζητά να αναπτύξει πρότυπα και ορισμούς που αναπτύσσουν τη διαλειτουργικότητα μεταξύ πληροφοριακών συστημάτων υγείας.
+Το HDF επίσης καταγράφει τις διαδικασίες, εργαλεία, κανόνες και οτιδήποτε σχετίζεται με τα πρότυπα ανάπτυξης του HL7. Κάποια στιγμή, το HL7 θα περιλαμβάνει όλες τις προδιαγραφές των προτύπων του
+Ηλεκτρονικός φάκελος ασθενών με χρήση XML Services και BPEL 73 Web
+￼￼￼￼￼￼￼￼￼
+￼Τμήμα Ψηφιακών Συστημάτων - Πανεπιστήμιο Πειραιώς
+￼￼￼￼￼￼￼￼￼HL7, συμπεριλαμβανομένων των καινούριων προτύπων που θα προκύψουν από την ανάλυση πληροφοριακών συστημάτων υγείας.
+Ανταλλαγή μηνυμάτων στο HL7 v3
+Στην έκδοση 3, το πρότυπο ανταλλαγής μηνυμάτων προσδιορίζει μια σειρά από ηλεκτρονικά μηνύματα για να υποστηριχθούν όλες οι ιατρικές ροές εργασίας. Τα μηνύματα αυτά βασίζονται στη σύνταξη της XML.
+4.4.2 Συνοχή φακέλου φροντίδας (Συνέχεια της Φροντίδας Record, CCR)
+Η συνοχή φακέλου φροντίδας (CCR) είναι ένα πρότυπο φακέλου υγείας που αναπτύσσεται από κοινού από την ASTM International, τον Ιατρικό Σύλλογο Μασαχουσέτης (Massachusets Ιατρικό Σύλλογο, MMS), ΤΟ Χιμς, την αμερικανική ακαδημία των οικογενειακών παθολόγων (Αμερικανική Ακαδημία Οικογενειακών Ιατρών, AAFP ), την αμερικανική ακαδημία παιδιατρικής (American Academy of Pediatrics, AAP), και από άλλους προμηθευτές πληροφορικής υγείας.
+Το πρότυπο CCR είναι πρότυπο περίληψης υγείας ασθενούς. Είναι ένας τρόπος να δημιουργηθούν ευέλικτα έγγραφα που περιέχουν τις πιο σχετικές και έγκαιρες / έγκυρες πληροφορίες υγείας για έναν ασθενή, και να σταλούν αυτές ηλεκτρονικά από έναν γιατρό σε άλλον. Περιέχει διάφορα τμήματα, όπως οι ασφαλιστικές πληροφορίες του ασθενούς, η διάγνωση και ο κατάλογος προβλημάτων, τα φάρμακα, οι αλλεργίες και το σχέδιο περίθαλψης. Όλα αυτά αντιπροσωπεύουν ένα στιγμιότυπο "στιγμιότυπο" των στοιχείων υγείας ενός ασθενούς που μπορεί να είναι χρήσιμα ή και ακόμη να σώσουν ζωές. Το ASTM CCR πρότυπο έχει σχεδιαστεί για να επιτρέψει την εύκολη χρήση από έναν παθολόγο χρησιμοποιώντας ένα ηλεκτρονικό σύστημα αρχείων υγείας.
+Επειδή εκφράζεται με την τυποποιημένη γλώσσα ανταλλαγής δεδομένων XML, ένα CCR μπορεί αν δημιουργηθεί, να διαβαστεί και να ερμηνευθεί από οποιεσδήποτε εφαρμογές λογισμικού ηλεκτρονικού φακέλου ασθενούς. Ένα CCR μπορεί επίσης να εξαχθεί με άλλη μορφή, όπως PDF και το Microsoft Word.
+Το CCR γίνεται το επιλεγμένο πρότυπο για την ανταλλαγή πληροφοριών ασθενών και για την βιομηχανική προσπάθεια να βελτιωθεί η ποιότητα της δυνατότητας μεταφοράς πληροφοριών υγείας για την αντιμετώπιση λαθών. Το CCR φέρει στην επιφάνεια την δυνατότητα
+
 	\subsection{HL7 messaging v2 και v3}
 
 	\subsection{CDA Documents}
@@ -101,15 +166,61 @@
 	
 
 	
-	\subsection{Ηλεκτρονικός Ιατρικός Φάκελος (HL7)}
+	\subsection{Ηλεκτρονικός Ιατρικός Φάκελος (EMR)}
+	
+
+		Στην σύστημα υγείας η πληρότητα και η διαθεσιμότητα των δεδομένων και της πληροφορίας είναι ζωτικής σημασίας. Ημιτελείς πληροφορίες μπορούν να έχουν ως αποτέλεσμα κακή διάγνωση και θεραπεία, σπατάλη χρημάτων και πόρων ακόμα και να επιφέρουν καταστάσεις οι οποίες να απειλούν τη ζωή. Ο όγκος των πληροφοριών που σχετίζονται με την φροντίδα του ασθενούς έχει πολλαπλασιαστεί τα τελευταία χρόνια, γεγονός που οφείλεται σε μεγάλο ποσοστό στην ενσωμάτωση αυξημένου αριθμού εργαστηριακών και παρακλινικών εξετάσεων στους φακέλους των ασθενών.
+	
+		Ο ηλεκτρονικός ιατρικός φακέλου είναι ένα σύστημα σχεδιασμένο ώστε να υποστηρίζει την απόλυτη διαθεσιμότητα και την ακρίβεια ιατρικών ή άλλων πληροφοριών με σκοπό την παροχή ιατρικής περίθαλψης. Ο ηλεκτρονικός ιατρικός φάκελος ασθενούς είναι μία διαρκώς εξελισσόμενη έννοια και καθορίζεται ως μια συλλογή από ιατρικές πληροφορίες ιδιωτών ή πληθυσμών. Είναι αποθηκευμένος σε ψηφιακή μορφή, έχει την ικανότητα να διαμοιράζεται μεταξύ διαφορετικών ιατρικών λογισμικών και μπορεί να μεταφερθεί μέσω του δικτύου. Ένας ηλεκτρονικός φάκελος μπορεί να περιλαμβάνει μεγάλο πλήθος δεδομένων σε πλήρη ή περιληπτική μορφή, όπως δημογραφικά στοιχεία, ιατρικό ιστορικό φαρμακευτική αγωγή και αλλεργίες, προσωπικά στοιχεία όπως βάρος, ύψος, φύλο και άλλα.
+		
+		Σε αυτό το σημείο θα πρέπει να κάνουμε τον διαχωρισμό του ηλεκτρονικού ιατρικού φακέλου(EMR) και του ηλεκτρονικού φακέλου υγείας(EHR). O ηλεκτρονικός φάκελος υγείας (EHR) είναι μια εξελισσόμενη έννοια 
+που αποθηκεύει ψηφιακά ένα υποσύνολο δεδομένων ή όλα τα δεδομένα σχετικά με τις ιατρικές πράξεις που έγιναν κατά τη διάρκεια της ζωής ενός ατόμου με σκοπό την υποστήριξη της ποιοτικής, προσβάσιμης και αποτελεσματικής συνέχειας στην παροχή υπηρεσιών υγείας. Ο ηλεκτρονικός ιατρικός φάκελος σε αντίθεση ορίζεται ως το αρχείο του ασθενούς που δημιουργήθηκε από τους παρόχους για συγκεκριμένες επισκέψεις του ασθενή σε νοσοκομεία και περιπατητική περιβάλλοντα, και η οποία μπορεί να χρησιμεύσει ως πηγή δεδομένων για τον ηλεκτρονικό φάκελο υγείας (EHR). Ο ηλεκτρονικός φάκελος υγείας (EHR) δημιουργείται και διατηρείται εντός ενός θεσμικού οργάνου, όπως ένα νοσοκομείο, ένα ολοκληρωμένο δίκτυο διανομής,μία κλινική, ή ένα γραφείο ιατρού για να δώσει σε όλους τους εμπλεκόμενους στην ιατρική φροντίδα πρόσβαση ιατρικό ιστορικό του ασθενούς.
 	
 	
-	
-	
-	
+		Ο κλασσικός ηλεκτρονικός ιατρικός φάκελος πρέπει κάθε χρονική στιγμή να περιέχει τουλάχιστον την επίσκεψη-επαφή του ασθενούς, το ιατρικό ιστορικό, τη διάγνωση, τη νοσηλεία (συνταγογράφηση, αποτελέσματα εργαστηριακών εξετάσεων ), τα δημογραφικά στοιχεία του ασθενούς (Όνομα, ΑΜΚΑ, Ασφαλιστικός φορέας, ομάδα αίματος κ.τ.λ.).
+
+
+Το λογισμικό του ηλεκτρονικού φακέλου υγείας ουσιαστικά είναι ένα σύστημα διαχείρισης ιατρικών φακέλων που βασίζεται σε ηλεκτρονικούς υπολογιστές. Το γεγονός αυτό έχει ως αποτέλεσμα να αποθηκεύονται και να ανακτώνται δεδομένα γρήγορα και με ασφάλεια. Επιπλέον, τα δεδομένα επεξεργάζονται εύκολα και γρήγορα και μπορούν να μεταφερθούν σε οποιαδήποτε σύστημα, σε οποιαδήποτε απόσταση. Το σύστημα καταγραφής των δεδομένων γίνεται πιο αποτελεσματικό και περισσότερο πλήρες. Ο ηλεκτρονικός ιατρικός φάκελος εμπεριέχει μία πληθώρα δεδομένων, τα οποία έχουν διαφορετική μορφή. Το ιστορικό, η κλινική εξέταση και τα αποτελέσματα εργαστηριακών εξετάσεων, είναι σε μορφή κειμένου, οι εξετάσεις του ασθενούς (ακτινογραφίες, τομογραφίες - αξονικές, μαγνητικές, απλές - υπέρηχοι κ.α.) είναι σε μορφή στατικών εικόνων, τα ηλεκτροκαρδιογραφήματα είναι σε μορφή βιοσημάτων ,τα αποτελέσματα των ενδοσκοπικών εξετάσεων (γαστροσκόπηση κ.α. ) είναι σε μορφή βίντεο κ.λ.π.  Στον ηλεκτρονικό ιατρικό φάκελο , όλα τα δεδομένα ενσωματώνονται στον φάκελο του ασθενούς χωρίς να παίζει σημαντικό ρόλο η μορφή τους. Σε διάφορα σημεία του κειμένου του ιστορικού και της κλινικής εξετάσεως ενσωματώνονται ακτινολογικές ή βιοχημικές εξετάσεις, πράγμα που κάνει αμέσως εμφανή την συσχέτιση των εν λόγω εξετάσεων με την γενικότερη κατάσταση του ασθενούς.
+
+Μερικά από τα πιο ουσιαστικά πλεονεκτήματα της χρήσης ενός συστήματος ηλεκτρονικού ιατρικού φακέλου είναι τα εξής
+\begin{itemize}
+
+\item Κέρδος χρόνου κατά την αναζήτηση και την συμπλήρωση στοιχείων του ιατρικού φακέλου. Η διείσδυση των τεχνολογιών αιχμής στον ιατρικό κόσμο εκσυγχρονίζεις την διαδικασία και κρατώντας όλα τα στοιχεία συγκεντρωμένα και με δυνατότητα άμεσης πρόσβασης - αναζήτησης επιταχύνουμε πολύ τις διαδικασίες.
+
+
+\item
+
+\item
+
+
+\end{itemize}
+
+
+
+Η ασφάλεια των ιατρικών δεδομένων είναι ένα σημαντικότατο θέμα για το οποίο, η
+τεχνολογία μέσω του ηλεκτρονικού ιατρικού φακέλου έχει δώσει ουσιαστικές λύσεις, οι οποίες
+μάλιστα μπορεί να θεωρηθούν αποτελεσματικότερες από αυτές που μέχρι σήμερα εφαρμόζονται
+για την τήρηση και φύλαξη των ιατρικών φακέλων των ασθενών.
+Στον ηλεκτρονικό ιατρικό φάκελο δίνεται ιδιαίτερη έμφαση στην προστασία των
+προσωπικών δεδομένων τα οποία αρχειοθετούνται. Φυσικά λόγω της ευαισθησίας των
+προσωπικών στοιχείων, πληρούνται όλες εκείνες οι προυποθέσεις ασφαλείας που εξασφαλίζουν
+το αδιάβλητο των δεδομένων. 
+
+
 	
 	
 	\subsection{epSOS}
+	
+		Η ανάγκη διασύνδεσης των συστημάτων υγείας και των πολιτικών που ακολουθούνται σε κάθε κράτος σχετικά με την υγεία στην Ευρωπαϊκή Ένωση, γίνεται όλο και πιο πιεστική, λόγω της αυξημένης κινητικότητας των ασθενών και των επαγγελματιών του ιατρικού τομέα και της διάδοσης των νέων ιατρικών τεχνολογιών και τεχνικών που αφορούν την τεχνολογία της πληροφορίας. Η διασύνδεση των διάφορων συστημάτων υγείας είναι απαραίτητη για την καλύτερη ποιότητα αλλά και την άμεση πρόσβαση των πολιτών στη διασυνοριακή περίθαλψη.  Πολλά κράτη μέλη της Ευρωπαϊκής Ένωσης έχουν αναπτύξει ηλεκτρονικά συστήματα σχετικά με τα αρχεία των ασθενών. Ο ηλεκτρονικός ιατρικός φάκελος του ασθενούς και η ηλεκτρονική συνταγογράφηση είναι δύο πολύ σημαντικά συστήματα τα οποία προάγουν την ασφαλή και αξιόπιστη ιατροφαρμακευτική περίθαλψη.	 	
+	 	
+	 	Η Ευρωπαϊκή Ένωση στα πλαίσια του στόχου της επικοινωνίας και της συνεργασίας των χωρών που εντάσσονται σε αυτή και την ύπαρξη κοινών οδηγιών στον τομέα της υγείας, τον Ιούλιο του 2008 σε συνεργασία με τους δημόσιους φορείς που έχουν αρμοδιότητα τις ηλεκτρονικές υπηρεσίες υγείας (ηλεκτρονικός ιατρικός φάκελος, ηλεκτρονικής συνταγογράφησης) ξεκίνησε ένα σημαντικό έργο, τον ευρωπαϊκό πιλότο epSOS (Έξυπνες Ανοιχτές Ηλεκτρονικές Υπηρεσίες για τους Ευρωπαίους Ασθενείς). Ο κύριος στόχος του epSOS είναι η ανάπτυξη ενός πρακτικού πλαισίου ηλεκτρονικής υγείας και κατάλληλων  υποδομών  στον τομέα της  Πληροφορικής και των Επικοινωνιών που θα επιτρέπουν την ασφαλή πρόσβαση των διάφορων μη εθνικών ευρωπαϊκών συστημάτων υγειονομικής περίθαλψης στις πληροφορίες αναφορικά με την υγεία του ασθενούς. Το epSOS είναι ένα έργο για την προώθηση της διαλειτουργικότητας της ηλεκτρονικής υγείας , το οποίο χρηματοδοτεί η Ευρωπαϊκή Ένωση και θέλει να χτίσει μια υποδομή υπηρεσιών, που θα επιτρέπει  τη διασυνοριακή διαλειτουργικότητα των συστημάτων ηλεκτρονικών μητρώων υγείας στην Ευρώπη, χωρίς να καταπατά όμως νομοθετικές ρυθμίσεις ή να υπερβαίνει τα ήδη υπάρχουσα εθνικά συστήματα. \cite{Dogac2012}
+
+
+		Το epSOS αποτελείται από δύο χωριστές υπηρεσίες ηλεκτρονικής υγείας, τον ιατρικό φάκελο ασθενούς (patient medical record) και την ηλεκτρονική συνταγογράφηση (e-prescription),  για τις οποίες αναζητούνται διαλειτουργικές μέθοδοι στη διασυνοριακή επικοινωνία. Ειδικότερα, ο ιατρικός φάκελος ασθενούς  (patient medical record) στα πλαίσια του epSOS αποτελείται από στοιχεία τα οποία εμπεριέχουν γενικές πληροφορίες για τον ασθενή (π.χ. όνομα, ηλικία, γένος), σημαντικά κλινικά δεδομένα (π.χ. αλλεργίες, χρόνιες ασθένειες, χειρουργικές επεμβάσεις) , καθώς και τα τρέχοντα αλλά και παλαιότερα φαρμακευτικά σκευάσματα που λάμβανε. Ο φάκελος ασθενούς παρέχει τις βασικές πληροφορίες, οι οποίες βοηθούν τους επαγγελματίες του τομέα της υγείας να λάβουν σωστότερες και πιο ασφαλείς αποφάσεις σχετικά με την θεραπεία και τα φάρμακα που θα ακολουθήσουν οι ασθενείς. Οι πληροφορίες αυτές πρέπει να παρέχονται στην γλώσσα των εκάστοτε γιατρών, ώστε να μην προκύπτουν γλωσσικά εμπόδια. Η ηλεκτρονική συνταγογράφηση αφορά τη συνταγογράφηση των φαρμάκων με χρήση κατάλληλου λογισμικού και την ηλεκτρονική διαβίβασή τους. Στην ηλεκτρονική συνταγογράφηση η διαλειτουργικότητα μεταξύ των εθνικών συστημάτων είναι απαραίτητη όταν έχουμε έναν ασθενή ο οποίος χρειάζεται κάποιο φάρμακο, το οποίο έχει ήδη συνταγογραφηθεί σε κάποια άλλη χώρα.  Ο φαρμακοποιός θα πρέπει να αποκτήσει ηλεκτρονική πρόσβαση στη συνταγή, και όταν το φάρμακο αγοραστεί, το ηλεκτρονικό σύστημα θα πρέπει να ενημερώσει σχετικά με τα διανεμημένα φάρμακα το σύστημα υγειονομικής περίθαλψης της χώρας του ασθενούς. \cite{epSOS}
+		
+		 Το epSOS επιτυγχάνει την ασφαλή πρόσβαση των ασθενών σε πληροφορίες σχετικά με την υγεία τους για τα διάφορα ευρωπαϊκά συστήματα υγείας. Το σύστημα είναι φτιαγμένο για να εξυπηρετήσει έναν πολίτη της Ευρωπαϊκής Ένωσης  που ενώ είναι κατοικεί σε μια συγκεκριμένη χώρας δέχεται τακτικά υπηρεσίες υγείας σε μια άλλη χώρα εξαιτίας του καθώς εργάζεται σε αυτή τη χώρα ή βρίσκεται προσωρινά σε μία άλλη χώρα (π.χ. για τουρισμό ) και είναι ανάγκη να εκτελέσει μία ιατρική συνταγή της χώρας του ή χρειάζεται επείγουσα ιατρική περίθαλψη. Το epSOS παρέχει την κοινοτική οδηγία για τη διασυνοριακή ιατρική περίθαλψη, η οποία θα πρέπει να ενσωματωθεί στο εθνικό δίκαιο των κρατών μελών τα επόμενα χρόνια και επιπροσθέτως προτείνει τεχνικές λύσεις σε όλα τα επίπεδα διαλειτουργικότητας, όπως και σε θέματα πολιτικής και σε νομικά ζητήματα. επεκτείνεται πέρα από την έκδοση συστάσεων, μοντέλων οργάνωσης, και εργαλείων λογισμικού  στην  δοκιμή των αποτελέσματα αυτών μέσω πραγματικών πιλοτικών εφαρμογών σε πολλές ευρωπαϊκές περιφέρειες και χώρες.
+		 
+
 
 \section{Υλοποίηση}
 \section{Δοκιμές}
