Implementation Chapter Structure

--- a/implementation.tex
+++ b/implementation.tex
@@ -1,24 +1,60 @@
 \graphicspath{ {Figures/implementation/} }
 \chapter{Υλοποίηση}\label{ch:Implementation}
-\section{Back-End}
-	\subsection{Parse}
-	\subsection{NodeJS}
-		
-\section{Front-End Cloud App}
-	\subsection{JS}
-	\subsection{jQuery και AngularJS}
-	\subsection{Screenshots}
-	\subsection{Social Networking Integration}
-	\subsection{Testing and Tools}
-		\subsubsection{Unit Testing}
-		\subsubsection{Infrastucture Testing}
-		\subsubsection{Performance Testing}
-		\subsubsection{Browser Compatibility Testing}
 
-\section{Android}
-	\subsection{Activities}
-	\subsection{Screenshots}
-	\subsection{Social Networking Integration}
+
+
+
+\section{Βάση δεδομένων}
+	\subsection{Σχήμα Βάσης}
+	- βαζουμε το "σχημα"
+	\subsection{Ανάλυση}
+	-επεξηγουμε τα πεδια οπως ο Αλεξανδρος
+
+
+\section{Web App}
+	-Sign Up	
+	-Sign In
+	-diaxeirisi appointment
+	-create new event
+	-forma pou vlepeis ola ta donation events
+	-forma pou blepeis olous tpu xristes gia 1 donation event
+	- psigeio me diathesima kai katanalwmena
+	-forma oloklirwsis aitisis me elegxo eligibility
+	-
+	-
+
+
+\section{Mobile App}
+
+	- Sign In
+	 -Sign Up
+	 -Create an Appointment
+	 -View History apo tis aimodosies tou
+	 -vlepei tis aimodosies genikotera (running, pending)
+	 -View badges - rewards
+	 -push notification
+	
+		
+
+%\section{Back-End}
+%	\subsection{Parse}
+%	\subsection{NodeJS}
+%		
+%\section{Front-End Cloud App}
+%	\subsection{JS}
+%	\subsection{jQuery και AngularJS}
+%	\subsection{Screenshots}
+%	\subsection{Social Networking Integration}
+%	\subsection{Testing and Tools}
+%		\subsubsection{Unit Testing}
+%		\subsubsection{Infrastucture Testing}
+%		\subsubsection{Performance Testing}
+%		\subsubsection{Browser Compatibility Testing}
+%
+%\section{Android}
+%	\subsection{Activities}
+%	\subsection{Screenshots}
+%	\subsection{Social Networking Integration}
 	\subsection{Testing and Tools}
 	Στο παρόν κεφάλαιο θα αναφερθούμε αρχικά στο περιβάλλον ελέγχου που μας παρέχει το Android καθώς και στους διαφορετικού τύπους ελέγχου που μπορούμε να εκτελέσουμε. Στην συνέχεια θα αναφερθούμε στους ελέγχους που πραγματοποιήσαμε καθώς και στα αποτελέσματα τους.
 	
