--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,7 @@
 \usepackage{multirow}
 \restylefloat{table}
 \usepackage{xcolor,colortbl}
+\renewcommand{\baselinestretch}{1.5}
 
 
 %----------------------------------------------------------------------------------------
@@ -76,7 +77,7 @@
 	frame=single
 	inputencoding=utf8
 }
-
+\addtolength{\parskip}{\baselineskip}
 
 \begin{document}
 
